epochX/cudacpp/tput/logs_susyggt1t1_mad/log_susyggt1t1_mad_m_inl0_hrd0.txt

Building in /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_t1t1.mad/SubProcesses/P1_gg_t1t1x
BACKEND=cppavx2 (was cppauto)
OMPFLAGS=
FPTYPE='d'
HELINL='0'
HRDCOD='0'
HASCURAND=hasNoCurand
HASHIPRAND=hasNoHiprand
Building in BUILDDIR=build.auto_d_inl0_hrd0 for tag=avx2_d_inl0_hrd0_hasNoCurand_hasNoHiprand (USEBUILDDIR == 1)
make: Nothing to be done for 'gtestlibs'.
make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

DATE: 2024-09-17_09:25:35

On uan01 [CPU: AMD EPYC 7A53 64-Core Processor] [GPU: AMD INSTINCT MI200]:
=========================================================================
runExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_t1t1.mad/SubProcesses/P1_gg_t1t1x/build.hip_m_inl0_hrd0/check_hip.exe -p 2048 256 2 OMP=
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
/users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_t1t1.mad/SubProcesses/P1_gg_t1t1x/build.hip_m_inl0_hrd0/check_hip.exe: Floating point exception
       766,231,314      cycles:u                         #    2.212 GHz                      (74.63%)
         2,355,246      stalled-cycles-frontend:u        #    0.31% frontend cycles idle     (75.38%)
         6,156,803      stalled-cycles-backend:u         #    0.80% backend cycles idle      (75.25%)
     1,368,516,818      instructions:u                   #    1.79  insn per cycle         
                                                  #    0.00  stalled cycles per insn  (75.59%)
       0.387224131 seconds time elapsed
-------------------------------------------------------------------------
runTest /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_t1t1.mad/SubProcesses/P1_gg_t1t1x/build.hip_m_inl0_hrd0/runTest_hip.exe
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
[  PASSED  ] 4 tests.
DEBUG: MEK (no multichannel) processed 512 events across 6 channels { no-multichannel : 512 }
INFO: No Floating Point Exceptions have been reported
DEBUG: MEK (channelid array) processed 512 events across 6 channels { 2 : 128, 3 : 96, 4 : 96, 5 : 96, 6 : 96 }
INFO: No Floating Point Exceptions have been reported
-------------------------------------------------------------------------
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_t1t1.mad/SubProcesses/P1_gg_t1t1x/build.hip_m_inl0_hrd0/check_hip.exe --common -p 2 64 2
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_t1t1.mad/SubProcesses/P1_gg_t1t1x/build.hip_m_inl0_hrd0/fcheck_hip.exe 2 64 2
Avg ME (C++/GPU)   = 
Avg ME (F77/GPU)   = 0.14771956187351573
  File "<string>", line 1
    me1=; me2=0.14771956187351573; reldif=abs((me2-me1)/me1); print('Relative difference =', reldif); ok = reldif <= 5E-3; print ( '%s (relative difference %s 5E-3)' % ( ('OK','<=') if ok else ('ERROR','>') ) )
        ^
SyntaxError: invalid syntax
